mobile for index fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   </a>
                </div>
               <nav class="main-nav">
-                  <div class="main-nav wrapper">
+                  <div class="wrapper-flex">
                       <ul class="main-nav__list site-list">
                           <li class="main-nav__items main-nav__items--active"><a href="#">Главная</a></li>
                           <li class="main-nav__items"><a href="#">Фотографии</a></li>
@@ -28,16 +28,16 @@
               </nav>
         </div>
         </div>
-        <section class="promo-section">
-          <div class="promo-section wrapper">
-            <h2 class="promo-section__header visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
+        <section class="promo-section index">
+          <div class="wrapper">
+            <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
           </div>
         </section>
     </header>
     <main class="container">
         <section class="promo-download">
-            <h2 class="promo-download__header visually_hidden">Выбор операционной системы для скачивания приложения PInk</h2>
-            <div class="promo-download wrapper">
+            <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения PInk</h2>
+            <div class="wrapper-flex">
                 <div class="promo-download__button">
                     <a href="#">Скачать приложение</a>
                 </div>
@@ -53,14 +53,14 @@
             </div>
         </section>
         <div class="features">
-            <div class="features wrapper">
-            <h2 class="features_header visually_hidden">Причины скачать приложение Pink</h2>
+            <div class="wrapper-flex">
+            <h2 class="visually_hidden">Причины скачать приложение Pink</h2>
             <div class="features-headers">
                 <h2 class="features__title">Устали от серости мегаполиса?</h2>
                 <h2 class="features__title">Нам есть, что вам предложить!</h2>
             </div>
                 <div class="features-items">
-                  <div class="features-items wrapper">
+                  <div class="wrapper-flex">
                     <section class="features-items__block">
                         <h2 class="features-items__title">Поднимает настроение</h2>
                         <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
@@ -74,6 +74,7 @@
                         <p class="features-items__descr">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых </p>
                     </section>
                     <div class="features-items__image-wrap">
+                      <img src="img/iphone-screen-mobile.png" width="140" height="289">
                     </div>
                 </div>
                 </div>
@@ -81,7 +82,7 @@
         </div>
         <section class="reviews">
             <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
-            <div class="reviews wrapper">
+            <div class="wrapper-flex">
                 <article class="slider-reviews">
                     <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
                     <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</div>
@@ -97,9 +98,9 @@
             </div>
         </section>
         <section class="price-block">
-            <h2 class="price-block__header visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
+            <h2 class="visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
             <article class="price-table">
-                <h2 class="price-table__header visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
+                <h2 class="visually_hidden">Таблица стоимости тарифов приложения Pink</h2>
                 <table class="traffic-table">
                     <tr class="traffic-table__tr--shown">
                         <td>Стандарт<span class="traffic-table__prices">3.99 USD</span></td>
@@ -122,8 +123,8 @@
             </div>
         </section>
         <section class="info-block">
-            <h2 class="info-block__header visually_hidden">Контактные данные</h2>
-            <div class="info-block__wrapper">
+            <h2 class="visually_hidden">Контактные данные</h2>
+            <div class="wrapper-flex">
                 <h2 class="info-block__text">Остались вопросы?Свяжитесь с нами!</h2>
                 <div class="info-block__contacts">
                     <div class="info-block__call-block">
@@ -137,10 +138,11 @@
                 </div>
             </div>
             <div class="map-block">
-                <div class="map-block wrapper">
+                <div class="wrapper-flex">
                     <p class="map-block__text">Приезжайте в гости:</p>
                     <address><a class="map-block__link" href="#">ул.Большая Конюшенная, 19/8</a></address>
                     <div class="map-block_map-item">
+                      <img src="img/bg-map-mobile@1x.png" width="300" height="300">
                     </div>
                 </div>
             </div>
