--- a/form.html
+++ b/form.html
@@ -9,36 +9,39 @@
 </head>
 <body>
   <header class="page-header page-header--active">
-        <div class="menu-header">
-          <div class="page-header__logo-wrap">
-                    <a href="/" class="page-header__logo-link">
-                        <img src="img/logo.svg" alt="Pink logo">
-                    </a>
-                </div>
-                  <nav class="main-nav">
-                      <div class="wrapper">
-                          <ul class="main-nav__list site-list">
-                              <li class="main-nav__items main-nav__items--active"><a href="#">Главная</a></li>
-                              <li class="main-nav__items"><a href="#">Фотографии</a></li>
-                              <li class="main-nav__items"><a href="#">Конкурс</a></li>
-                              <li class="main-nav__items"><a href="#">HTML ACADEMY</a></li>
-                          </ul>
-                          <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
-                      </div>
-                  </nav>
-              <section class="contest-page">
-                <h2 class="visually_hidden">Приложение pink для путешествий</h2>
-                <section class="wrapper">
-                  <h2 class="contest-page__text">Конкурс на самое безбашеное путешествие с Пинк</h2>
-                </section>
-              </section>
+        <div class="page-header__nav-wrap">
+            <div class="menu-header">
+               <div class="page-header__logo-wrap">
+                  <a href="/" class="page-header__logo-link">
+                    <img src="img/logo.svg" alt="Pink logo">
+                  </a>
+               </div>
+              <nav class="main-nav">
+                  <div class="wrapper-flex">
+                      <ul class="main-nav__list site-list">
+                          <li class="main-nav__items main-nav__items--active"><a href="#">Главная</a></li>
+                          <li class="main-nav__items"><a href="#">Фотографии</a></li>
+                          <li class="main-nav__items"><a href="#">Конкурс</a></li>
+                          <li class="main-nav__items"><a href="#">HTML ACADEMY</a></li>
+                      </ul>
+                      <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
+                  </div>
+              </nav>
         </div>
-  </header>
+        </div>
+        <section class="form-section">
+          <div class="wrapper-flex">
+            <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
+            <h2 class="form-section__text">Конкурс на самое безбашенное путешествие с Пинк</h2>
+          </div>
+        </section>
+        </header>
   <main class="container">
     <section class="info-user">
       <h2 class="visually_hidden">Условия конкурса приложения Pink</h2>
       <div class="wrapper">
-        <p class="info-user__text">Поделитесь своей историей и получите шанс выиграть ценный приз &mdash; 1000 миль на вашу бонусную карту!</p>
+        <p class="info-user__text">Поделитесь своей историей и получите шанс выиграть ценный приз &mdash; 1000 <br class="separator__form-text "> миль на вашу бонусную карту!</p>
+        <p class="info-user__text--mobile-hidden">Пожалуйста, заполните форму ниже:</p>
       </div>
     </section>
     <form class="user-form" method="get" action="https://echo.htmlacademy.ru/adaptive">
@@ -68,72 +71,76 @@
       </section>
       <section class="achievments-page">
         <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
-        <div class="wrapper-flex">
+        <div class="wrapper-flex form form--achievments-page">
           <p class="achievments-page__text">Ваши безбашенные достижения в путешествии</p>
           <div class="catalog-checkbox">
+            <input type="checkbox" checked class="catalog-checkbox__input catalog-checkbox__input--active" id="checkbox">
             <label for="checkbox" class="catalog-checkbox__label catalog-checkbox__label--active">
-              <input type="checkbox" checked class="catalog-checkbox__input catalog-checkbox__input--active" id="checkbox"> Сделал селфи с акулой
+            Сделал селфи с акулой
             </label>
             <br>
+            <input type="checkbox" checked class="catalog-checkbox__input catalog-checkbox__input--active" id="checkbox_beach">
             <label for="checkbox_beach" class="catalog-checkbox__label">
-              <input type="checkbox" checked class="catalog-checkbox__input catalog-checkbox__input--active" id="checkbox_beach"> Обгорел на пляже
+            Обгорел на пляже
             </label>
             <br>
+            <input type="checkbox" class="catalog-checkbox__input" id="checkbox_seen">
             <label for="checkbox_seen" class="catalog-checkbox__label">
-              <input type="checkbox" class="catalog-checkbox__input" id="checkbox_seen">Видел Чака Норриса
+            Видел Чака Норриса
             </label>
             <br>
+            <input type="checkbox" class="catalog-checkbox__input" id="checkbox_souvenirs">
             <label for="checkbox_souvenirs" class="catalog-checkbox__label">
-              <input type="checkbox" class="catalog-checkbox__input" id="checkbox_souvenirs">Накупил сувениров
+              Накупил сувениров
             </label>
             <br>
+             <input type="checkbox" checked class="catalog-checkbox__input" id="checkbox_keep-castle">
             <label for = "checkbox_keep-castle" class="catalog-checkbox__label">
-                  <input type="checkbox" checked class="catalog-checkbox__input" id="checkbox_keep-castle">
                   Удержал башню
               </label>
               <br>
+              <input type="checkbox" class="catalog-checkbox__input" id="crash_hotel">
               <label  for="crash_hotel" class="catalog-checkbox__label" for id=" ">
-                  <input type="checkbox" class="catalog-checkbox__input" id="crash_hotel">
                   Разгромил отель
               </label>
           </div>
-        </div>
+          </div>
       </section>
       <section class="user-address">
         <h2 class="visually_hidden">Контактные данные приложения Pink</h2>
-        <div class="wrapper-flex">
-          <div class="user-contacts">
-            <label for="input_number" class="user-contacts__label">
+          <div class="wrapper-flex form form--user-contacts">
+            <p class="user-contacts__text--mobile_hidden">Контактная информация</p>
+            <label for="input_number" class="user-contacts__label phone_number">
               Номер телефона
               </label>
-              <input type="text" class="user-contacts__input" placeholder ="Номер, пожалуйста" id="input_number">
+              <input type="text" class="user-contacts__input table_hidden" placeholder ="Номер, пожалуйста" id="input_number">
+              <input type="text" placeholder ="+7 ХХХ ХХХ-ХХ-ХХ" class="user-contacts__input--mobile_hidden input_number" id="input_address">
             <br>
-            <label for="input_address" class="user-contacts__label">
+            <label for="input_address" class="user-contacts__label mail_address">
               Адрес почты
             </label>
-              <input type="text" placeholder ="Введите почту *" class="user-contacts__input" id="input_address">
+              <input type="text" placeholder ="Введите почту *" class="user-contacts__input input_mail" id="input_address">
           </div>
-        </div>
       </section>
       <section class="os-choice">
         <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
-        <div class="wrapper-flex">
+        <div class="wrapper-flex form">
           <p class="os-choice__text">С каким приложением путешествовали?</p>
           <div class="radio-buttons-group">
+           <input type="radio" id="radio-select" class="radio-button-group__input">
             <label for="radio-select" class="radio-buttons-group__label">
-              <input type="radio" id="radio-select" class="radio-button-group__input">
               Pink для ios
             </label>
             <div class="radio-select__check"></div>
             <br>
+            <input type="radio" id="radio-select_android" class="radio-button-group__input">
             <label for="radio-select_android" class="radio-buttons-group__label">
-              <input type="radio" id="radio-select_android" class="radio-button-group__input">
               Pink на Android
             </label>
             <div class="radio-select__check"></div>
             <br>
+            <input type="radio" id="radio-select_windows" class="radio-button-group__input">
             <label for="radio-select_windows" class="radio-buttons-group__label">
-              <input type="radio" id="radio-select_windows" class="radio-button-group__input">
               Windows Phone
             </label>
             <div class="radio-select__check"></div>
@@ -142,7 +149,7 @@
       </section>
       <section class="form-describe">
         <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
-        <div class="wrapper-flex">
+        <div class="wrapper-flex form">
           <h2 class="form-describe__text">Опишите свои эмоции</h2>
           <textarea name="feedback" cols="30" rows="5" class="form-section__text-area" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           <br>
@@ -155,6 +162,7 @@
   </main>
   <footer class="page-shown-footer">
     <div class="wrapper">
+    <div class="page-shown-footer__container">
       <section class="page-shown-footer__img-wrap">
         <h2 class="visually_hidden">Свяжитесь с нами</h2>
         <img src="img/logo.jpg" alt="Pink logo">
@@ -171,6 +179,7 @@
         <p class="page-shown-footer__copyright-text">Разработано:</p>
         <a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
       </section>
+    </div>
     </div>
   </footer>
   <div class="popup">
