--- a/photo.html
+++ b/photo.html
@@ -34,21 +34,21 @@
                 </section>
               </section>
               </header>
-  <main class="container">
+  <main class="main-class">
     <section class="user-blogs">
       <div class="wrapper-flex">
         <h2 class="user-blogs__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
       </div>
     </section>
     <div class="blog-post">
+      <figure class="blog-post__image--panorama_image">
+      <img src="img/panorama-mobile.jpg" class="temp-image--mobile" width="320" height="137" alt="Фотография пользователя из социальной сети">
+      <img src="img/panorama-mobile.jpg"  class="temp-image" width="700" height="521" alt="Фотография пользователя из социальной сети">
+      <span class="special-icon">Панорама дня</span>
+      </figure>
       <div class="wrapper-flex">
         <article class="blog-post__item--panorama_item">
           <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
-          <figure class="blog-post__image--panorama_image">
-            <img src="img/panorama-mobile.jpg" class="temp-image--mobile" width="320" height="137" alt="Фотография пользователя из социальной сети">
-             <img src="img/panorama-mobile.jpg"  class="temp-image" width="700" height="521" alt="Фотография пользователя из социальной сети">
-            <span class="special-icon">Панорама дня</span>
-          </figure>
           <div class="blog-post__body--panorama__body">
             <header class="blog-post__header-group">
             <h2 class="blog-post__header">Анна</h2>
@@ -64,7 +64,7 @@
         </article>
       </div>
     </div>
-    <div class="blog-post__group">
+    <div class="blog-post__group wrapper">
         <article class="blog-post__item">
           <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
           <figure class="blog-post__image">
