border box adding to wrappers and container

--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
         </div>
         </div>
         <section class="promo-section index">
-          <div class="wrapper-flex">
+          <div class="wrapper-flex index-wrapper">
             <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
-            <h2 class="promo-section__text">Взгляните на жизнь иначе</h2>
+            <h2 class="promo-section__text">Взгляните <br class="separator-desktop"> на жизнь <br class="separator-desktop"> иначе!</h2>
           </div>
         </section>
         <section class="promo-download">
             <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения PInk</h2>
-            <div class="wrapper-flex">
                 <div class="promo-download__button">
                     <a href="#">Скачать приложение</a>
                 </div>
@@ -50,7 +49,7 @@
                     <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
               Windows Phone, OS X, Windows 8</h2>
                 </div>
-            </div>
+            </div>''
         </section>
     </header>
     <main class="container">
@@ -58,13 +57,13 @@
             <div class="wrapper-flex">
             <h2 class="visually_hidden">Причины скачать приложение Pink</h2>
             <div class="features-headers">
-                <h2 class="features__title">Устали от серости мегаполиса?</h2>
+                <h2 class="features__title features-title--first">Устали от серости мегаполиса?</h2>
                 <br class="br-separator">
-                <h2 class="features__title">Нам есть, что вам
-                <br class="br-separator__tablet">предложить!</h2>
+                <h2 class="features__title features__title--second">Нам есть, что вам предложить!</h2>
             </div>
                 <div class="features-items">
-                  <div class="wrapper-flex">
+                  <div class="wrapper-flex features-items__block--desktop-wrapper">
+                    <div class="features-items-group">
                     <section class="features-items__block">
                         <h2 class="features-items__title">Поднимает настроение</h2>
                         <p class="features-items__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
@@ -74,18 +73,18 @@
                         <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                     </section>
                     <section class="features-items__block">
-                        <h2 class="features-items__title">Заводит новых друзей</h2>
+                        <h2 class="features-items__title">Заводит  <br class="separator-desktop"> новых друзей</h2>
                         <p class="features-items__descr">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых </p>
                     </section>
+                    </div>
                     <div class="features-items__image-wrap">
                       <img src="img/iphone-screen-mobile.png" width="140" height="289">
                     </div>
                     <section class="features-items__block mobile_hidden">
                       <h2 class="features-items__title--custom_size">Эффект<br class="separator"> на 24 часа!</h2>
-                      <p class="features-items__descr">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+                      <p class="features-items__descr features-items__descr--custom_description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
                       <a class="features-items__link">Узнать больше об исследовании</a>
                     </section>
-                </div>
                 </div>
           </div>
         </div>
@@ -95,7 +94,7 @@
                 <article class="slider-reviews">
                     <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
                     <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</div>
-                    <h2 class="slider-reviews__header">Николай Петров <br class="separator"><span>25 лет, водитель трамвая</span></h2>
+                    <h2 class="slider-reviews__header">Николай Петров <br class="separator"><br class="separator-desktop"><span>25 лет, водитель трамвая</span></h2>
                 </article>
                 <div class="slider-reviews__pagination">
                     <span class="slider-reviews__pagination-item--active"></span>
@@ -134,7 +133,7 @@
         <section class="info-block">
             <h2 class="visually_hidden">Контактные данные</h2>
             <div class="wrapper-flex">
-                <h2 class="info-block__text">Остались вопросы?<br class="separator">Свяжитесь с нами!</h2>
+                <h2 class="info-block__text">Остались вопросы?<br class="separator"><br class="separator-desktop">Свяжитесь с нами!</h2>
                 <div class="info-block__contacts">
                     <div class="info-block__call-block">
                         <p class="phone__text">Звоните:</p>
